examples/test/testpolicy2934.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2934
  namespace: namespace394
spec:
  podSelector:
    matchLabels:
      key0: value29
      key31: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value42
          key48: value47
          key35: value4
      podSelector:
        matchLabels:
          key25: value39
          key38: value2
          key40: value25
